[Create & Update] product create & update